fixed InputReader