@@ -3,7 +3,6 @@ package compiler;
 import java.io.OutputStreamWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * provide input string as stream
@@ -85,8 +84,8 @@ public class InputReader implements InputReaderIntf, Cloneable {
 	}
 
 	public static String fileToString(String fileName) throws Exception {
-		Path filePath = Paths.get(fileName);
-		String content = Files.readAllBytes(filePath).toString();
+		Path filePath = Path.of(fileName);
+		String content = Files.readString(filePath);
 		return content;
 	}
 }
